--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,9 @@
     <string name="event_add_button">Add New Event</string>
     <string name="event_add_button_text">Add Event</string>
     <string name="event_mandatory_fields">Bold fields are required to create a new event</string>
+    <string name="event_single_event_display">Single Event Display</string>
+    <string name="event_single_event_duration">The event will last about %s minutes</string>
+    <string name="event_see_my_events">My Events</string>
     <string-array name="eventDurations">
         <item>less than 30 minutes</item>
         <item>30 minutes</item>
