--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="event_display_links">Event Links</string>
     <string name="event_hub">Event Hub</string>
     <string name="event_list">Event List:</string>
+    <string name="my_events_managements">My Events Managements</string>
     <string-array name="eventDurations">
         <item>less than 30 minutes</item>
         <item>30 minutes</item>
